--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-name: Hank Quinlan, Horrible Cop
+name: Kiemute Oyibo, Postdoctoral Fellow
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
